# MutualFundRAGChatbot

./: .env.example  .gitignore  README.md  pyproject.toml  render.free.yaml  render.yaml  requirements.txt
.github/workflows/: ingest-scheduled.yml
deploy/: README.md
deploy/chroma_data/: chroma.sqlite3
docs/: deployFreeTier.md  deployRenderVercel.md  deploymentPlan.md  edgeCases.md  ragArchitecture.md  ragChunkingEmbeddingVectorDb.md
phase0/: README.md
phase1/: README.md
phase1/mfr_phase1/: __init__.py  __main__.py  chunking.py  config.py  embedding.py  groww_facts.py  pipeline.py  registry.py  scrape.py  vectorstore.py
phase2/: README.md
phase2/mfr_phase2/: __init__.py  __main__.py  groq_client.py  prompts.py  respond.py  retrieve.py  routing.py  scheme_infer.py  settings.py  validator.py
phase3/: README.md
phase3/mfr_phase3/: __init__.py  __main__.py  classifier.py  education.py  pii.py  respond.py  settings.py
phase4/: README.md
phase4/mfr_phase4/: __init__.py  __main__.py  app.py  schemas.py  service.py  settings.py  thread_store.py
phase4/mfr_phase4/static/: app.js  config.js  index.html  styles.css  vercel.json
phase5/: README.md
phase5/mfr_phase5/: __init__.py  __main__.py  cases.json  checks.py  corpus_stats.py  hybrid_demo.py  load_cases.py  runner.py
scripts/: export-deploy-chroma.sh  render-build.sh  run-ingest-scheduled.sh
